--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -14,11 +14,15 @@
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">My Sign-Off</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<nav class="nav-link" style="--bs-breadcrumb-divider:'>';" aria-label="breadcrumb">
+				<nav class="nav-link" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 					<ol class="breadcrumb" style="--bs-breadcrumb-margin-bottom:0rem; padding-left:1rem;">
-						<li class="breadcrumb-item" aria-current="page">
+						<li class="breadcrumb-item">
 							<i class="bi bi-house-fill"></i>&nbsp;
-							<a href="#">Home</a>
+							<a href="/MySignoff/home">Home</a>
+						</li>
+						<li class="breadcrumb-item active" aria-current="page">
+							<i class="bi bi-briefcase-fill"></i>&nbsp;
+							<span th:text="${project?.name}">Project</span>
 						</li>
 					</ol>
 				</nav>
@@ -30,28 +34,26 @@
 			<tr>
 				<th scope="col">#</th>
 				<th scope="col">Key</th>
-				<th scope="col">Project</th>
-				<th scope="col">Issue Types</th>
-				<th scope="col">Administrators</th>
+				<th scope="col">Title</th>
+				<th scope="col">Creater</th>
+				<th scope="col">Assignee</th>
+				<th scope="col">Create Date</th>
+				<th scope="col">Update Date</th>
+				<th scope="col">Status</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="project, status : ${projects}">
-				<td scope="row" th:text="${(status.index+1)}">#</td>
-				<td scope="col" th:text="${project.key}">Key</td>
+			<tr th:each="issue, item : ${issues}">
+				<td scope="row" th:text="${(item?.index+1)}">0</td>
+				<td scope="col" th:text="${issue?.key}">Key</td>
 				<td scope="col">
-					<a th:href="@{'/MySignoff/project/' + ${project.key}}" th:text="${project.name}">Name</a>
+					<a th:href="@{'/MySignoff/issue/' + ${issue?.key}}" th:text="${issue?.title}">Title</a>
 				</td>
-				<td scope="col" class="text-left">
-					<th:block th:each="issueType : ${project.issuetypes}">
-						<button type="button" class="btn btn-link" th:text="${issueType.name}">issuetype</button>
-					</th:block>
-				</td>
-				<td scope="col" class="text-left">
-					<th:block th:each="admin : ${project.permissions.admin.members}">
-						<button type="button" class="btn btn-link" th:text="${admin}">admin</button>
-					</th:block>
-				</td>
+				<td scope="col" th:text="${issue?.creator}">Creator</td>
+				<td scope="col" th:text="${issue?.assignee}">Assignee</td>
+				<td scope="col" th:text="${issue?.createdate}">Create Date</td>
+				<td scope="col" th:text="${issue?.updatedate}">Update Date</td>
+				<td scope="col" th:text="${issue?.status}">Status</td>
 			</tr>
 		</tbody>
 	</table>
