--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -9,7 +9,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
 </head>
-<body data-bs-theme="dark">
+<body class="container-xxl" data-bs-theme="dark">
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">My Sign-Off</a>
@@ -25,7 +25,7 @@
 							<span th:text="${project?.name}">Project</span>
 						</li>
 					</ol>
-				</nav>
+				</nav> 
 			</div>
 		</div>
 	</nav>
